Refactor login screen components and update asset imports

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_gen:
+  output: lib/core/assets/
+  
 flutter:
   uses-material-design: true
 
