Add SuccessScreen and VerifyEmail components with spacing styles
- Created WSpacingStyles for consistent padding.
- Implemented SuccessScreen widget to display success messages with an image, title, and subtitle.
- Developed VerifyEmail screen to prompt users to verify their email with navigation to SuccessScreen upon confirmation.
- Integrated assets and constants for styling and text management.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.6
@@ -26,7 +27,7 @@ dev_dependencies:
 
 flutter_gen:
   output: lib/core/assets/
-  
+
 flutter:
   uses-material-design: true
 
