feat: Add custom widgets and styles for product display and report screens
- Implemented WShadowsStyle for consistent shadow effects.
- Created WRoundedContainer for customizable rounded containers.
- Developed ToggleSwitcher for toggling between product and category views.
- Introduced CircularIcon for circular icon buttons.
- Added CartCounterIcon for cart icon with item count.
- Designed CategoryCard for displaying product categories.
- Created ProductCardHorizontal and ProductCardVertical for product listings.
- Established ReportDetailScreen and ReportScreen for report functionalities.
- Implemented ReportHeader and TransactionItem for displaying transaction details.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ flutter:
   assets:
     - assets/images/on_boarding_images/
     - assets/images/carousel/
+    - assets/images/products/
     - assets/icons/
     - assets/fonts/
     - assets/logos/
